# hindsight

./: .gitignore  LICENSE.md  Makefile  Makefile.env.sample  Makefile.python  Makefile.python.build  README.md  SConstruct  dev-requirements.txt  monitor_lock.sh  pyproject.toml  requirements.txt  sample.sconstruct.ini  scons.md  setup.cfg  setup.py
hindsight/: common.py  hindsight.py  restore.py  save.py  test.py
mf_support/: Makefile.docker  Makefile.env.sample  Makefile.env.win.sample  Makefile.jupyter  Makefile.python  Makefile.python.build
sample/: settings.toml  settings.yaml
src/hindsight/: common.py  hindsight.py  restore.py  save.py  test.py
support/: .gitignore  README.md  build_venv.ps1  build_venv.sh  sample.path.ini
